# HPPS24-Tensor-Contraction-HLS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  example.env  justfile  types.h
analysis/: analysis.ipynb  charts.ipynb  compile_all.sh  compute_all.sh  linux_single_results.csv  pyproject.toml  q05-010.qasm  q05-020.qasm  q05-030.qasm  q05-040.qasm  q05-050.qasm  q05-060.qasm  q05-070.qasm  q05-080.qasm  q05-090.qasm  q05-100.qasm  q05-200.qasm  q05-300.qasm  q05-400.qasm  q05-500.qasm  q06-010.qasm  q06-020.qasm  q06-030.qasm  q06-040.qasm  q06-050.qasm  q06-060.qasm  q06-070.qasm  q06-080.qasm  q06-090.qasm  q06-100.qasm  q06-200.qasm  q06-300.qasm  q06-400.qasm  q06-500.qasm  q07-010.qasm  q07-020.qasm  q07-030.qasm  q07-040.qasm  q07-050.qasm  q07-060.qasm  (+22 more)
complex/: cmplx.cpp
matrix-multiplication/: krnl_mat_mul.h
report/: Makefile  README.md  main.tex  old2.tex  report.tex  table.tex
report/assets/: biblio.bib  operation_tree.graphviz  tensor_network.graphviz
scripts/: report.just  sync.just  vitis.just
scripts/cmake/: dependencies.cmake
scripts/just/: report.just  sync.just  vitis.just
scripts/vitis/: Makefile  makefile_us_alveo.mk
src/: CMakeLists.txt  cmplx.cpp  cmplx.h  io.cpp  io.h  krnl_tens_exp.cpp  krnl_tens_exp.h  tensors.cpp  tensors.h  tensors.hpp  types.cpp  types.h
src/complex/: cmplx.h
src/host/: host-combined.cpp  host-combined.h
src/host-opencl/: tensor_expansion_test.cpp
src/kernels/: types.h
src/kernels/matrix-multiplication/: krnl_mat_mul.h
src/kernels/tensor-expansion/: krnl_tens_exp.cpp  krnl_tens_exp.h
src/matrix-multiplication/: krnl_mat_mul.cpp  krnl_mat_mul.h
src/tensor/: io.cpp  io.h
src/tensor-expansion/: krnl_tens_exp.cpp  krnl_tens_exp.h  tens_exp.cpp
src/tests/: csv_writer.cpp  golden_reader.cpp  golden_reader.h  qcf_reader.cpp  qcf_reader.h
src/tests/combined/: test_combined.cpp
src/tests/matrix-multiplication/: test_matrix_multiplication.cpp
src/tests/qft/: qft.qcf  test_qft_qcf.cpp
src/tests/tensor-expansion/: test_golden_reader.cpp  test_tensor_expansion.cpp
src/utils/: csv_writer.cpp  csv_writer.h  golden_reader.cpp  golden_reader.h  qcf_reader.h
tensor-expansion/: justfile  krnl_tens_exp.cpp  krnl_tens_exp.h  krnl_tens_exp.hpp
tensor-expansion/golden-vectors/: Makefile  golden_reader.cpp  golden_reader.h  test_golden_reader.cpp
test/: Makefile  makefile_us_alveo.mk
tests/: CMakeLists.txt  golden_reader.cpp  golden_reader.h
tests/tensor-expansion/: test_golden_reader.cpp
vitis/: .justfile  Makefile  makefile_us_alveo.mk
vitis/host/: host-combined.cpp  tensor_expansion_test.cpp  tensor_expansion_test.h
workspace/: .analytics
workspace/.metadata/: version.ini
workspace/HPPS24-Tensor-Contraction-HLS/: .cproject  .project  (+1 more)
(+32 files in other folders)
